# olympiad-exercises

./: .gitignore  .gitmodules  README.md  template.py
algorithms/: 0_1_knapsack.cpp  articulation_points.cpp  bridges.cpp  date_time.cpp  dijkstra.cpp  fast_exponentiation.cpp  fenwick_tree.cpp  gcd_extended_euclid.cpp  graph_bipartite_bicoloring.cpp  lis_NlogN.cpp  lowest_common_ancestor_binary_lifting.cpp  max_flow.cpp  multiplicative_inverse.cpp  prime_numbers.cpp  rabin_karp_hash_multiplicative_inverse.cpp  segment_tree.cpp  segment_tree_lazy_propagation.cpp  strongly_connected_components.cpp  topological_sort.cpp  union_find_disjoint_set.cpp
caesar/: README.md  caesar.cpp
kattis/: 8queens.cpp  addingwords.cpp  areal.cpp  ballotboxes.cpp  base2palindrome.cpp  builddeps.cpp  calculatingdartscores.cpp  chess.cpp  countingstars.cpp  deduplicatingfiles.cpp  doublepassword.cpp  dream.cpp  engineeringenglish.cpp  equalsumseasy.cpp  flagquiz.cpp  frosting.cpp  fruitbaskets.cpp  guessthedatastructure.cpp  heritage.cpp  minspantree.cpp  moneytransfers.cpp  moviecollection.cpp  muzicari.cpp  narrowartgallery.cpp  natjecanje.cpp  nineknights.cpp  oddities.cpp  overdraft.cpp  powers.cpp  reversebinary.cpp  reversingroads.cpp  ridofcoins.cpp  rockpaperscissors.cpp  shortestpath1.cpp  standings.cpp  sylvester.cpp  template.cpp  trendingtopic.cpp  (+3 more)
more/reply-2025/: .gitignore  Cargo.toml  README.md  build.rs
more/reply-2025/csrc/: alessio.cpp  alessio2.cpp  bindings.hpp  carmen.cpp  cmain.cpp  greedy.cpp  template.cpp  templatetest.cpp
more/reply-2025/src/: lib.rs  main.rs
(+561 files in other folders)
