[package]
name = "reply"
version = "0.1.0"
edition = "2024"

[dependencies]
#rustsat= "0.6"
#rustsat-minisat = "0.4"
rayon = "1.0"
mpi={ version = "0.8", features = ["user-operations", "derive"] }

[lib]
name = "reply"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[build-dependencies]
bindgen ="0.71"
cc = "1.0"
cbindgen="0.28"
